# dispersl-sdk

./: .gitignore  API-DOCS.yaml  LICENSE  README.md
.dispersl/: mcp.json.example
.github/workflows/: ci.yml  python-ci.yml  release-python.yml  release-typescript.yml  typescript-ci.yml
examples/py/: agent_lifecycle_and_stats.py  mcp_custom_agent_flow.py  plan_handover_loop.py  single_agent_completion.py  task_insight_progress.py
examples/ts/: agent-lifecycle-and-stats.ts  mcp-custom-agent-flow.ts  plan-handover-loop.ts  single-agent-completion.ts  task-insight-progress.ts
python-sdk/: .pre-commit-config.yaml  .pylintrc  Makefile  README.md  mypy.ini  pyproject.toml  pytest.ini  run_tests.py  setup.py
python-sdk/examples/: agentic_workflow.py  mcp_tools_usage.py
python-sdk/src/dispersl/: __init__.py  agentic.py  auth.py  client.py  errors.py  exceptions.py  executor.py  handover.py  http.py  mcp.py  models.py  ndjson.py  retry.py  serializers.py  utils.py
python-sdk/src/dispersl/models/: __init__.py  api.py  base.py
python-sdk/src/dispersl/resources/: __init__.py  agents.py  auth.py  base.py  history.py  models.py  steps.py  tasks.py
python-sdk/tests/: conftest.py  test_executor.py  test_handover.py  test_ndjson.py
python-sdk/tests/e2e/: __init__.py  test_complete_workflows.py
python-sdk/tests/fixtures/: __init__.py  mock_api_responses.py  mock_server.py
python-sdk/tests/integration/: __init__.py  test_api_integration.py  test_workflow_integration.py
python-sdk/tests/unit/: __init__.py  test_agentic.py  test_agentic_executor.py  test_client.py  test_http.py  test_pagination.py  test_resources_agents.py  test_resources_tasks.py  test_retry.py  test_serializers.py
scripts/: release_check.sh  verify.sh
typescript-sdk/: .eslintrc.cjs  .eslintrc.json  README.md  eslint.config.js  jest.config.js  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
typescript-sdk/.husky/: pre-commit  pre-commit.example  pre-push.example
typescript-sdk/examples/: agentic_workflow.ts  custom-tool.ts  loop.ts  mcp_tools_usage.ts
typescript-sdk/src/: agentic.ts  auth.ts  client.ts  errors.ts  exceptions.ts  executor.ts  handover.ts  http.ts  index.ts  mcp.ts  ndjson.ts  retry.ts  serializers.ts  types.ts  utils.ts
typescript-sdk/src/models/: api.ts  base.ts  index.ts
typescript-sdk/src/resources/: agents.ts  auth.ts  base.ts  history.ts  index.ts  models.ts  steps.ts  tasks.ts
typescript-sdk/tests/: executor.test.ts  handover.test.ts  ndjson.test.ts  setup.ts
typescript-sdk/tests/e2e/: complete.workflows.test.ts
typescript-sdk/tests/fixtures/: mockApiResponses.ts  mockServer.ts
typescript-sdk/tests/integration/: api.integration.test.ts  workflow.integration.test.ts
typescript-sdk/tests/unit/: agentic.test.ts  client.test.ts  http.test.ts  pagination.test.ts  retry.test.ts  serializers.test.ts
