[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[project]
name = "dispersl-sdk"
version = "0.1.0"
description = "Production Python SDK for Dispersl API"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "httpx>=0.27.2",
  "pydantic>=2.9.2"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.7.2",
  "mypy>=1.13.0",
  "build>=1.2.2"
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF"]

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["src/dispersl"]

[tool.hatch.build.targets.sdist]
include = ["src/dispersl", "tests", "README.md", "pyproject.toml"]
